examples/1d_gas_piston/piston/parser/Parser.output
Terminals unused in grammar

    BOGUS
    '^'


Grammar

    0 $accept: File $end

    1 File: ValidInput EoF
    2     | ValidInput END

    3 ValidInput: %empty
    4           | ValidInput Assignment
    5           | ValidInput GroupInput

    6 Assignment: Assignable '=' Symbol ';'
    7           | Assignable '=' IntExpr ';'
    8           | Assignable '=' DblExpr ';'
    9           | Assignable '=' String ';'

   10 $@1: %empty

   11 GroupInput: UNDER Assignable '{' $@1 ValidInput '}'

   12 Assignable: Symbol
   13           | Assignable '.' Symbol
   14           | Assignable '[' IntExpr ']'

   15 IntExpr: IntConstant
   16        | '(' IntExpr ')'
   17        | IntExpr '+' IntExpr
   18        | IntExpr '-' IntExpr
   19        | IntExpr '*' IntExpr
   20        | IntExpr '/' IntExpr

   21 DblExpr: DblConstant
   22        | '(' DblExpr ')'
   23        | DblExpr '+' DblExpr
   24        | DblExpr '+' IntExpr
   25        | IntExpr '+' DblExpr
   26        | DblExpr '-' DblExpr
   27        | DblExpr '-' IntExpr
   28        | IntExpr '-' DblExpr
   29        | DblExpr '*' DblExpr
   30        | IntExpr '*' DblExpr
   31        | DblExpr '*' IntExpr
   32        | DblExpr '/' DblExpr
   33        | IntExpr '/' DblExpr
   34        | DblExpr '/' IntExpr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 22
    ')' (41) 16 22
    '*' (42) 19 29 30 31
    '+' (43) 17 23 24 25
    '-' (45) 18 26 27 28
    '.' (46) 13
    '/' (47) 20 32 33 34
    ';' (59) 6 7 8 9
    '=' (61) 6 7 8 9
    '[' (91) 14
    ']' (93) 14
    '^' (94)
    '{' (123) 11
    '}' (125) 11
    error (256)
    UNDER (258) 11
    EoF (259) 1
    IntConstant <ival> (260) 15
    DblConstant <dval> (261) 21
    Symbol <token> (262) 6 12 13
    String <sval> (263) 9
    END (264) 2
    BOGUS (265)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    File (26)
        on left: 1 2
        on right: 0
    ValidInput (27)
        on left: 3 4 5
        on right: 1 2 4 5 11
    Assignment (28)
        on left: 6 7 8 9
        on right: 4
    GroupInput (29)
        on left: 11
        on right: 5
    $@1 (30)
        on left: 10
        on right: 11
    Assignable <asgn> (31)
        on left: 12 13 14
        on right: 6 7 8 9 11 13 14
    IntExpr <ival> (32)
        on left: 15 16 17 18 19 20
        on right: 7 14 16 17 18 19 20 24 25 27 28 30 31 33 34
    DblExpr <dval> (33)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 8 22 23 24 25 26 27 28 29 30 31 32 33 34


State 0

    0 $accept: • File $end

    $default  reduce using rule 3 (ValidInput)

    File        go to state 1
    ValidInput  go to state 2


State 1

    0 $accept: File • $end

    $end  shift, and go to state 3


State 2

    1 File: ValidInput • EoF
    2     | ValidInput • END
    4 ValidInput: ValidInput • Assignment
    5           | ValidInput • GroupInput

    UNDER   shift, and go to state 4
    EoF     shift, and go to state 5
    Symbol  shift, and go to state 6
    END     shift, and go to state 7

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


State 3

    0 $accept: File $end •

    $default  accept


State 4

   11 GroupInput: UNDER • Assignable '{' $@1 ValidInput '}'

    Symbol  shift, and go to state 6

    Assignable  go to state 11


State 5

    1 File: ValidInput EoF •

    $default  reduce using rule 1 (File)


State 6

   12 Assignable: Symbol •

    $default  reduce using rule 12 (Assignable)


State 7

    2 File: ValidInput END •

    $default  reduce using rule 2 (File)


State 8

    4 ValidInput: ValidInput Assignment •

    $default  reduce using rule 4 (ValidInput)


State 9

    5 ValidInput: ValidInput GroupInput •

    $default  reduce using rule 5 (ValidInput)


State 10

    6 Assignment: Assignable • '=' Symbol ';'
    7           | Assignable • '=' IntExpr ';'
    8           | Assignable • '=' DblExpr ';'
    9           | Assignable • '=' String ';'
   13 Assignable: Assignable • '.' Symbol
   14           | Assignable • '[' IntExpr ']'

    '='  shift, and go to state 12
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


State 11

   11 GroupInput: UNDER Assignable • '{' $@1 ValidInput '}'
   13 Assignable: Assignable • '.' Symbol
   14           | Assignable • '[' IntExpr ']'

    '{'  shift, and go to state 15
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


State 12

    6 Assignment: Assignable '=' • Symbol ';'
    7           | Assignable '=' • IntExpr ';'
    8           | Assignable '=' • DblExpr ';'
    9           | Assignable '=' • String ';'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    Symbol       shift, and go to state 18
    String       shift, and go to state 19
    '('          shift, and go to state 20

    IntExpr  go to state 21
    DblExpr  go to state 22


State 13

   13 Assignable: Assignable '.' • Symbol

    Symbol  shift, and go to state 23


State 14

   14 Assignable: Assignable '[' • IntExpr ']'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 25


State 15

   11 GroupInput: UNDER Assignable '{' • $@1 ValidInput '}'

    $default  reduce using rule 10 ($@1)

    $@1  go to state 26


State 16

   15 IntExpr: IntConstant •

    $default  reduce using rule 15 (IntExpr)


State 17

   21 DblExpr: DblConstant •

    $default  reduce using rule 21 (DblExpr)


State 18

    6 Assignment: Assignable '=' Symbol • ';'

    ';'  shift, and go to state 27


State 19

    9 Assignment: Assignable '=' String • ';'

    ';'  shift, and go to state 28


State 20

   16 IntExpr: '(' • IntExpr ')'
   22 DblExpr: '(' • DblExpr ')'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 29
    DblExpr  go to state 30


State 21

    7 Assignment: Assignable '=' IntExpr • ';'
   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ';'  shift, and go to state 35


State 22

    8 Assignment: Assignable '=' DblExpr • ';'
   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ';'  shift, and go to state 40


State 23

   13 Assignable: Assignable '.' Symbol •

    $default  reduce using rule 13 (Assignable)


State 24

   16 IntExpr: '(' • IntExpr ')'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 41


State 25

   14 Assignable: Assignable '[' IntExpr • ']'
   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    ']'  shift, and go to state 46


State 26

   11 GroupInput: UNDER Assignable '{' $@1 • ValidInput '}'

    $default  reduce using rule 3 (ValidInput)

    ValidInput  go to state 47


State 27

    6 Assignment: Assignable '=' Symbol ';' •

    $default  reduce using rule 6 (Assignment)


State 28

    9 Assignment: Assignable '=' String ';' •

    $default  reduce using rule 9 (Assignment)


State 29

   16 IntExpr: '(' IntExpr • ')'
   17        | IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ')'  shift, and go to state 48


State 30

   22 DblExpr: '(' DblExpr • ')'
   23        | DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ')'  shift, and go to state 49


State 31

   17 IntExpr: IntExpr '+' • IntExpr
   25 DblExpr: IntExpr '+' • DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 50
    DblExpr  go to state 51


State 32

   18 IntExpr: IntExpr '-' • IntExpr
   28 DblExpr: IntExpr '-' • DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 52
    DblExpr  go to state 53


State 33

   19 IntExpr: IntExpr '*' • IntExpr
   30 DblExpr: IntExpr '*' • DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 54
    DblExpr  go to state 55


State 34

   20 IntExpr: IntExpr '/' • IntExpr
   33 DblExpr: IntExpr '/' • DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 56
    DblExpr  go to state 57


State 35

    7 Assignment: Assignable '=' IntExpr ';' •

    $default  reduce using rule 7 (Assignment)


State 36

   23 DblExpr: DblExpr '+' • DblExpr
   24        | DblExpr '+' • IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 58
    DblExpr  go to state 59


State 37

   26 DblExpr: DblExpr '-' • DblExpr
   27        | DblExpr '-' • IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 60
    DblExpr  go to state 61


State 38

   29 DblExpr: DblExpr '*' • DblExpr
   31        | DblExpr '*' • IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 62
    DblExpr  go to state 63


State 39

   32 DblExpr: DblExpr '/' • DblExpr
   34        | DblExpr '/' • IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 20

    IntExpr  go to state 64
    DblExpr  go to state 65


State 40

    8 Assignment: Assignable '=' DblExpr ';' •

    $default  reduce using rule 8 (Assignment)


State 41

   16 IntExpr: '(' IntExpr • ')'
   17        | IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    ')'  shift, and go to state 48


State 42

   17 IntExpr: IntExpr '+' • IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 66


State 43

   18 IntExpr: IntExpr '-' • IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 67


State 44

   19 IntExpr: IntExpr '*' • IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 68


State 45

   20 IntExpr: IntExpr '/' • IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 24

    IntExpr  go to state 69


State 46

   14 Assignable: Assignable '[' IntExpr ']' •

    $default  reduce using rule 14 (Assignable)


State 47

    4 ValidInput: ValidInput • Assignment
    5           | ValidInput • GroupInput
   11 GroupInput: UNDER Assignable '{' $@1 ValidInput • '}'

    UNDER   shift, and go to state 4
    Symbol  shift, and go to state 6
    '}'     shift, and go to state 70

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


State 48

   16 IntExpr: '(' IntExpr ')' •

    $default  reduce using rule 16 (IntExpr)


State 49

   22 DblExpr: '(' DblExpr ')' •

    $default  reduce using rule 22 (DblExpr)


State 50

   17 IntExpr: IntExpr • '+' IntExpr
   17        | IntExpr '+' IntExpr •
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 17 (IntExpr)


State 51

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   25        | IntExpr '+' DblExpr •
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 25 (DblExpr)


State 52

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   18        | IntExpr '-' IntExpr •
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 18 (IntExpr)


State 53

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   28        | IntExpr '-' DblExpr •
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 28 (DblExpr)


State 54

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   19        | IntExpr '*' IntExpr •
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    $default  reduce using rule 19 (IntExpr)


State 55

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   30        | IntExpr '*' DblExpr •
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    $default  reduce using rule 30 (DblExpr)


State 56

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   20        | IntExpr '/' IntExpr •
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    $default  reduce using rule 20 (IntExpr)


State 57

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   33        | IntExpr '/' DblExpr •
   34        | DblExpr • '/' IntExpr

    $default  reduce using rule 33 (DblExpr)


State 58

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   24 DblExpr: DblExpr '+' IntExpr •
   25        | IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 24 (DblExpr)


State 59

   23 DblExpr: DblExpr • '+' DblExpr
   23        | DblExpr '+' DblExpr •
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 23 (DblExpr)


State 60

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   27        | DblExpr '-' IntExpr •
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 27 (DblExpr)


State 61

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   26        | DblExpr '-' DblExpr •
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 26 (DblExpr)


State 62

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   31        | DblExpr '*' IntExpr •
   33        | IntExpr • '/' DblExpr

    $default  reduce using rule 31 (DblExpr)


State 63

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   29        | DblExpr '*' DblExpr •
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   34        | DblExpr • '/' IntExpr

    $default  reduce using rule 29 (DblExpr)


State 64

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   25 DblExpr: IntExpr • '+' DblExpr
   28        | IntExpr • '-' DblExpr
   30        | IntExpr • '*' DblExpr
   33        | IntExpr • '/' DblExpr
   34        | DblExpr '/' IntExpr •

    $default  reduce using rule 34 (DblExpr)


State 65

   23 DblExpr: DblExpr • '+' DblExpr
   24        | DblExpr • '+' IntExpr
   26        | DblExpr • '-' DblExpr
   27        | DblExpr • '-' IntExpr
   29        | DblExpr • '*' DblExpr
   31        | DblExpr • '*' IntExpr
   32        | DblExpr • '/' DblExpr
   32        | DblExpr '/' DblExpr •
   34        | DblExpr • '/' IntExpr

    $default  reduce using rule 32 (DblExpr)


State 66

   17 IntExpr: IntExpr • '+' IntExpr
   17        | IntExpr '+' IntExpr •
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 17 (IntExpr)


State 67

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   18        | IntExpr '-' IntExpr •
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 18 (IntExpr)


State 68

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   19        | IntExpr '*' IntExpr •
   20        | IntExpr • '/' IntExpr

    $default  reduce using rule 19 (IntExpr)


State 69

   17 IntExpr: IntExpr • '+' IntExpr
   18        | IntExpr • '-' IntExpr
   19        | IntExpr • '*' IntExpr
   20        | IntExpr • '/' IntExpr
   20        | IntExpr '/' IntExpr •

    $default  reduce using rule 20 (IntExpr)


State 70

   11 GroupInput: UNDER Assignable '{' $@1 ValidInput '}' •

    $default  reduce using rule 11 (GroupInput)
